--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -27,18 +27,7 @@
         <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="thissite.changeView($event, item)"></nav-item>
       </primary-items>
     </c-main-navigation>
-<!-- 
-    <c-main-navigation ng-cloak>
-      <primary-items>
-        <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" active="{{item.active}}" ng-click="thissite.changeView($event, item)">
-          {{item.name}}
-          <sub-navigation ng-if="item.active && item.children" item="item" sub-navigation>
-            <nav-item ng-repeat="subItem in item.children" location="{{item.url}}">{{subItem.name}}</nav-item>
-          </sub-navigation>
-        </nav-item>
-      </primary-items>
-    </c-main-navigation>
- -->
+
     <section class="light">
       <div class="container">
         <h2>Angular navigation demo</h2>
@@ -62,7 +51,7 @@
     function ThisSite() {
       var vm = this;
       vm.items = [
-        { name: 'home', location: '/corporate-ui/', active: true },
+        { name: 'Home', location: '/corporate-ui/', active: true },
         { name: 'Style Guide', location: '/corporate-ui/styleguide/', children: [
           { name: 'Logotype', location: '/corporate-ui/logotype/' },
           { name: 'Icons', location: '/corporate-ui/icons/' },
@@ -75,7 +64,9 @@
           { name: 'Scania Bootstrap', location: '/corporate-ui/developer/scania-bootstrap.html' },
           { name: 'Support', location: '/corporate-ui/template/html-copy-paste/html-copy-paste.html' }          
         ] },
-        { name: 'Mobile Apps', location: '/corporate-ui/mobile-apps/' }
+        { name: 'Mobile Apps', location: '/corporate-ui/mobile-apps/' },
+        { name: 'Report an Issue', location: '/scania/corporate-ui/issues' },
+        { name: 'Support', location: '/corporate-ui/developer/support.html' }
       ];
       vm.changeView = function($event, target) {
         $event.preventDefault();
@@ -107,7 +98,7 @@
           tAttrs.$set('template', tElement.html());
           // Need to a way to reset and compile template using template attribute when user clicks the navigation
           iAttrs.$observe('ngIf', function() {
-            console.log('apa')
+            console.log('Hey, we made it!')
           });
         }
       }
@@ -115,19 +106,7 @@
     window.CorporateUi.baseComponents();
   </script>
 
-  <script>
-   // ServiceWorker is a progressive technology. Ignore unsupported browsers
-  if ('serviceWorker' in navigator) {
-    console.log('CLIENT: service worker registration in progress.');
-    navigator.serviceWorker.register('/corporate-ui/template/service-worker.js').then(function() {
-      console.log('CLIENT: service worker registration complete.');
-    }, function() {
-      console.log('CLIENT: service worker registration failure.');
-    });
-  } else {
-    console.log('CLIENT: service worker is not supported.');
-  }
-  </script>
-  
+
+
 </body>
 </html>
