--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="scania" ng-controller="ThisSite as thissite">
+<body class="scania app" ng-controller="ThisSite as thissite">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="/corporate-ui/">UX Library</nav-item>
@@ -36,7 +36,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="page-header">
-                    <h3>Page Design</h3>
+                    <h3>Sample Components</h3>
                     <h4>For Scania Applications</h4>
                   </div>
                 </div>
