--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -41,14 +41,8 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="btn-toolbar pull-right">
-                    <button class="btn btn-default">Print</button>
-                    <button class="btn btn-success">Save</button>                            
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-primary">Create
-                        <i class="icon-caret-down"></i>
-                      </button>
-                    </div>
+                  <div class="alert alert-info">
+                    <p>This is a demopage using AngularJS togheter with Corporate UI. </p> 
                   </div>
                 </div>
               </div>
