--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="scania app" ng-controller="ThisSite as thissite">
+<body class="scania app" ng-controller="ThisSite as thissite" data-env="demo">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="/corporate-ui/">UX Library</nav-item>
@@ -41,8 +41,9 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="alert alert-info">
-                    <p>This is a demopage using AngularJS togheter with Corporate UI. </p> 
+                  <div class="alert alert-warning">
+                    <h3>NOTE!</h3>
+                    <p>This is a demopage using AngularJS togheter with Corporate UI. It can be solved in meny differnet ways and this is a very basic sample. It is not intended to use "as is" rather than to give you ideas and samples of how to pair Corporate UI with the framework of your choice.</p> 
                   </div>
                 </div>
               </div>
