--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -32,7 +32,7 @@
       <div class="container">
         <article>
         <h2>Angular Corporate UI Demo</h2>
-          <p>This is a demopage using AngularJS togheter with Corporate UI. It can be solved in meny differnet ways and this is a very basic sample. It is not intended to use "as is" rather than to give you ideas and samples of how to pair Corporate UI with the framework of your choice.</p> 
+          <p>This is a demopage using AngularJS togheter with Corporate UI. Populating the main navigation can be solved in meny differnet ways and this is a very basic sample. It is not intended to use "as is" rather than to give you ideas and samples of how to pair Corporate UI with the framework of your choice. Use <a href="../developer/scania-bootstrap-original-docs.html">Scania Bootstrap</a> to apply the Scania User Interface to your application. </p> 
         </article>  
       </div>
     </section>
