--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -28,10 +28,10 @@
       </primary-items>
     </c-main-navigation>
 
-    <section class="light">
+    <section class="bg-brand-01">
       <div class="container">
-        <article>
-        <h2>Angular Corporate UI Demo</h2>
+        <article class="color-brand-02">
+        <h1>Angular Corporate UI Demo</h1>
           <p>This is a demopage using AngularJS togheter with Corporate UI. Populating the main navigation can be solved in meny differnet ways and this is a very basic sample. It is not intended to use "as is" rather than to give you ideas and samples of how to pair Corporate UI with the framework of your choice. Use <a href="/corporate-ui/developer/bootstrap-original-docs.html">Scania Bootstrap</a> to apply the Scania Brand Identity to your application.</p>
           <p>Learn why <a href="/corporate-ui/developer/caching.html">you shouldn't include Corporate UI in your build</a> rather than fetch it from <a href="/corporate-ui/images/data-centers.png" target="_blank">the Scania CDN</a> in real time.</p> 
           <a href="angular-basic-template.html" download class="btn btn-default btn-lg">Download this template</a>
