--- a/docs/template/basic-template-app.html
+++ b/docs/template/basic-template-app.html
@@ -23,11 +23,13 @@
 
 		<c-main-navigation>
 			<primary-items>
-				<nav-item location="https://www.scania.com/ux-library">UX Library</nav-item>
+				<nav-item location="https://www.scania.com/ux-library">Home</nav-item>
 				<nav-item location="https://scania.github.io/corporate-ui/developer/" class="active">Web Applications
 					<sub-navigation caption="Templates">
 						<nav-item location="https://scania.github.io/corporate-ui/template/basic-template-app.html" class="active">Application Template</nav-item>
-						<nav-item location="https://scania.github.io/corporate-ui/template/basic-template.html">Public site Template</nav-item>		
+						<nav-item location="https://scania.github.io/corporate-ui/template/basic-template.html">Public site Template</nav-item>
+						<nav-item location="https://scania.github.io/corporate-ui/template/angular-basic-template.html">Angular Template</nav-item>
+						<nav-item location="https://scania.github.io/corporate-ui/template/table-basic-template.html">Tables Demos</nav-item>			
 					</sub-navigation>
 				</nav-item>
 			</primary-items>
