--- a/docs/template/basic-template-public.html
+++ b/docs/template/basic-template-public.html
@@ -23,8 +23,9 @@
 
     <c-main-navigation>
       <primary-items>
-        <nav-item location="https://www.scania.com/ux-library">UX Library</nav-item>
-        <nav-item location="#" class="active">Web Applications
+				<nav-item location="https://www.scania.com/ux-library">Home</nav-item>
+				<nav-item location="https://scania.github.io/corporate-ui/developer/" class="active">Web Applications
+					<sub-navigation caption="Templates">
           <sub-navigation caption="Web Applications">
             <nav-item location="https://static.scania.com/ux-library/developer/">Developer Info</a>
           </sub-navigation>
