--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -66,7 +66,7 @@
         ] },
         { name: 'Web Applications', location: '/corporate-ui/developer/', active: true , children: [
           { name: 'Corporate UI', location: '/corporate-ui/developer/', active: true  },
-          { name: 'Caching', location: '/corporate-ui/developer/caching.html' },
+          { name: 'UIaaS', location: '/corporate-ui/developer/uiaas.html' },
           { name: 'Scania Bootstrap', location: '/corporate-ui/developer/scania-bootstrap.html' },
           { name: 'Support', location: '/corporate-ui/template/html-copy-paste/html-copy-paste.html' }
         ] },
