--- a/docs/template/corporate-ui-basic-template.html
+++ b/docs/template/corporate-ui-basic-template.html
@@ -54,7 +54,7 @@
             <nav-item location="/corporate-ui/developer/">Corporate UI</nav-item>          
             <nav-item location="/corporate-ui/component/">Available Components</nav-item>
             <nav-item location="/corporate-ui/template/">Templates</nav-item>
-            <nav-item location="/corporate-ui/developer/caching.html">Caching stategies</nav-item>
+            <nav-item location="/corporate-ui/developer/uiaas.html">UIaaS stategies</nav-item>
             <nav-item location="/corporate-ui/developer/support.html">Request support</nav-item>            
           </sub-navigation>
         </nav-item>
