--- a/docs/template/advanced-tables/table-tree-view.html
+++ b/docs/template/advanced-tables/table-tree-view.html
@@ -8,11 +8,10 @@
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
   </noscript>
 
-  <title>Corporate UI - Demo page</title>
-  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+  <title>Corporate UI - Table Tree View</title>
 
-  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
+  <script src="https://static.scania.com/build/global/2.3.4/js/corporate-ui.js"></script>
 
   <style>
     tbody th {font-family: 'Scania Sans Bold'}
@@ -21,13 +20,13 @@
 
   <!-- Table Sorter Plugin -->
 
-  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.7/js/jquery.tablesorter.min.js"></script>
-  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.7/js/jquery.tablesorter.widgets.min.js"></script>
+  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.28.15/js/jquery.tablesorter.min.js"></script>
+  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.28.15/js/jquery.tablesorter.widgets.min.js"></script>
   <!-- Tablesorter: optional -->
   <link rel="stylesheet"
-  href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.7/addons/pager/jquery.tablesorter.pager.css">
-  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.7/addons/pager/jquery.tablesorter.pager.js"></script>
-  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.7/addons/expandable/jquery.tablesorter.expandable.js"></script>
+  href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.28.15/addons/pager/jquery.tablesorter.pager.css">
+  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.28.15/addons/pager/jquery.tablesorter.pager.js"></script>
+  <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.28.15/addons/expandable/jquery.tablesorter.expandable.js"></script>
 
 
   <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/hColumns/css/hcolumns.css" type="text/css">
@@ -42,85 +41,36 @@
     .tablesorter th, .tablesorter td {border:none !important;}
   </style>  
 
-  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
+  <link rel="stylesheet" href="/ux-library/ux-lib.css">
 </head>
-<body unresolved class="scania app" data-env="proto">
+<body unresolved class="scania" data-env="proto">
 
-  <c-corporate-header site-name="Change Me" site-url="Change Me">
-    <nav-item location="https://www.scania.com/world/#/">Your Stuff</nav-item>
-    <nav-item location="https://www.scania.com/group/en/">Your Stuff</nav-item>
-  </c-corporate-header>
+<c-corporate-header site-name="UX Library">
+    <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
+    <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+</c-corporate-header>
 
-  <c-main-content>
+<c-main-content>
 
     <c-main-navigation show-search>
-      <primary-items>
-        <nav-item location="styleguide/" class="active">Change me</nav-item>
-        <nav-item location="developer/">Change Me</nav-item>
-          <nav-item location="../developer/" class="active">hcolumns plugin
-          <sub-navigation caption="hcolumns">
-            <nav-item location="/corporate-ui/developer/" class="active">Your Stuff</nav-item>
-            <nav-item location="/corporate-ui/component/">Your Stuff</nav-item>
-            <nav-item location="/corporate-ui/template/">Your Stuff</nav-item>
-            <nav-item location="/corporate-ui/developer/uiaas.html">Your Stuff</nav-item>
-            <nav-item location="/corporate-ui/developer/scania-bootstrap.html">Your Stuff</nav-item>
-            <nav-item location="/corporate-ui/developer/support.html">Your Stuff</nav-item>
-          </sub-navigation>
-        </nav-item>        
-      </primary-items>
+        <primary-items>
+            <nav-item location="table-basic-template.html">Standard Tables</nav-item>
+            <nav-item location="table-pagination.html">Table with Pagination</nav-item>            
+            <nav-item location="table-filtered-app.html">Filtered table</nav-item>
+            <nav-item location="table-column-selector-widget.html">Column Selector</nav-item>
+            <nav-item location="table-responsive-cards.html">Responsive Cards</nav-item>            
+            <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
+            <nav-item location="table-tree-view.html">Tree View</nav-item>                   
+        </primary-items>
     </c-main-navigation>
 
 
 
-
-  
-
-<section>
-    
-  <table id="table" class="table tablesorter">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Business Team</th>
-        <th>Backend Team</th>
-        <th>Front End Team</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>1st</th>
-        <td>Facts check</td>
-        <td>Sanity check</td>
-        <td>Sanity check</td>
-      </tr>
-      <tr>
-        <th>2nd</th>
-        <td>Spell check</td>
-        <td>Regression test light</td>
-        <td>Broken links</td>
-      </tr>      
-      <tr>
-        <th>3rd</th>
-        <td>Market specific information</td>
-        <td>Sample markets (Italy/Ireland)</td>
-        <td>Device and screen tests</td>
-      </tr>
-      <tr>
-        <th>4th</th>
-        <td>Slides & content</td>
-        <td>Performance test</td>
-        <td>Code Quality</td>
-      </tr>
-      <tr>
-        <th>5th</th>
-        <td>Internal & public versions</td>
-        <td>Internal and external access</td>
-        <td>Internal & public versions</td>
-      </tr>
-    </tbody>
-  </table>
-
-
+    <section class="bg-brand-01">
+        <div class="container mx-auto color-brand-02">
+            <h2 class="color-brand-02">Apple Tree View</h2>
+            <p>This is a basic tree view often used by Apple.</p>     
+        </div>
   <div id="columns"></div>
 
   <script src="https://static.scania.com/vendors/components/jQuery/hColumns/js/jquery.hcolumns.min.js"></script>
@@ -198,6 +148,6 @@
       </div>
     </section>
   </c-main-content>
-  <script src="/corporate-ui/ux-lib.js"></script>
+  <script src="/ux-library/ux-lib.js"></script>
 </body>
 </html>
