--- a/docs/template/advanced-tables/responsive-cards/table-responsive-cards.html
+++ b/docs/template/advanced-tables/responsive-cards/table-responsive-cards.html
@@ -27,7 +27,7 @@
 	<script src="https://mottie.github.io/tablesorter/docs/js/jquery-ui.min.js"></script>
 <!-- 	<link rel="stylesheet" href="css/bootstrap-v3.min.css"> -->
 	<script src="https://mottie.github.io/tablesorter/docs/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="https://mottie.github.io/tablesorter/docs/css/jq.css">
+	<link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.28.15/css/theme.corporate-ui-reflow.css">
 	<link href="https://mottie.github.io/tablesorter/docs/css/tipsy.css" rel="stylesheet">
 <!-- 	<link href="https://mottie.github.io/tablesorter/docs/css/prettify.css" rel="stylesheet">
 	<script src="https://mottie.github.io/tablesorter/docs/js/prettify.js"></script> -->
