--- a/docs/template/advanced-tables/table-basic-template.html
+++ b/docs/template/advanced-tables/table-basic-template.html
@@ -8,7 +8,7 @@
 
   <title>Basic Table</title>
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.3.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.3.4/js/corporate-ui.js"></script>
 
 </head>
 
@@ -27,7 +27,7 @@
             <nav-item location="table-pagination.html">Table with Pagination</nav-item>            
             <nav-item location="table-filtered-app.html">Filtered table</nav-item>
             <nav-item location="table-column-selector-widget.html">Column Selector</nav-item>
-            <nav-item location="table-responsive-cards.html">Responsive Cards</nav-item>            
+            <nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>            
             <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
             <nav-item location="table-tree-view.html">Tree View</nav-item>                   
         </primary-items>
