--- a/docs/template/advanced-tables/table-pagination.html
+++ b/docs/template/advanced-tables/table-pagination.html
@@ -9,7 +9,7 @@
   <title>Table with Pagination</title>
 
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.3.1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.3.4/js/corporate-ui.js"></script>
 
   
     <!-- Table Sorter Plugin -->
@@ -69,7 +69,7 @@
             <nav-item location="table-pagination.html">Table with Pagination</nav-item>            
             <nav-item location="table-filtered-app.html">Filtered table</nav-item>
             <nav-item location="table-column-selector-widget.html">Column Selector</nav-item>
-            <nav-item location="table-responsive-cards.html">Responsive Cards</nav-item>            
+            <nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>            
             <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
             <nav-item location="table-tree-view.html">Tree View</nav-item>                   
         </primary-items>
@@ -365,5 +365,5 @@
 
   <c-corporate-footer></c-corporate-footer>
 
-  <script src="/ux-library/ux-lib.js"></script>
+  <script src="/corporate-ui/ux-lib.js"></script>
 </body>
