Fixed so that border underline color is equal to tabs-light

--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -98,7 +98,7 @@
   sub-navigation nav-item a:hover:after, 
   nav-itemsub-navigation a:hover:after {
     content: "";
-    border-bottom: 2px solid #c50918;
+    border-bottom: 2px solid #d6001c;
     position: absolute;
     left: 15px;
     right: 15px;
