--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -30,7 +30,7 @@ a[href="/corporate-ui/component/"] {
   z-index: 9000;
   bottom: 40px;
   right: 40px;
-  background-color: #c50918;
+  background-color: #d6001c;
   color: #fff;
   font-size: 18px;
   padding: 10px 15px;
@@ -59,7 +59,7 @@ a[href="/corporate-ui/component/"] {
   }
 }
 .ux-lib .panel-group a {
-  color: #c50918;
+  color: #d6001c;
 }
 .ux-lib .main-item {
   margin: 30px 0 50px 0;
