Submitted all tables

--- a/docs/template/advanced-tables/table-filtered-app.html
+++ b/docs/template/advanced-tables/table-filtered-app.html
@@ -55,7 +55,7 @@ href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/ad
 
 <!--   <link rel="stylesheet" href="/ux-library/ux-lib.css"> -->
 </head>
-<body unresolved class="scania">
+<body class="scania">
 
 <c-corporate-header site-name="UX Library">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
