--- a/docs/template/advanced-tables/table-basic-template.html
+++ b/docs/template/advanced-tables/table-basic-template.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body unresolved class="scania">
+<body class="scania">
 
 <c-corporate-header site-name="UX Library">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
