--- a/docs/template/advanced-tables/table-column-selector-widget.html
+++ b/docs/template/advanced-tables/table-column-selector-widget.html
@@ -162,7 +162,7 @@
 });
 </script>
 </head>
-<body unresolved class="scania">
+<body class="scania">
 
 <c-corporate-header site-name="UX Library">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
