--- a/docs/template/advanced-tables/table-pagination.html
+++ b/docs/template/advanced-tables/table-pagination.html
@@ -54,7 +54,7 @@
 
   <link rel="stylesheet" href="/ux-library/ux-lib.css">
 </head>
-<body unresolved class="scania">
+<body class="scania">
 
 <c-corporate-header site-name="UX Library">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
