Added advanced-tables folder

--- a/docs/template/html-template.html
+++ b/docs/template/html-template.html
@@ -670,7 +670,7 @@ ul.nav-tabs > li > a {
                         <div class="form-group">
                           <label class="control-label">Name of job
                           </label>
-                          <input type="text" value='' autofocus class="form-control" placeholder="Brödleverans">
+                          <input type="text" value='' class="form-control" placeholder="Brödleverans">
                         </div>
                       </div>
                       <div class="col-xs-12 col-md-8">
@@ -741,13 +741,13 @@ ul.nav-tabs > li > a {
                       <div class="fcol-xs-12 col-md-3">
                         <div class="form-group">
                           <label class="control-label nowrap">Time in advance (min)</label>
-                          <input type="text" value='' autofocus class="form-control" placeholder="30">
+                          <input type="text" value='' class="form-control" placeholder="30">
                         </div>
                       </div>
                       <div class="col-xs-12 col-md-9">
                         <div class="form-group">
                           <label class="control-label nowrap">Notify expected delays</label>
-                          <input type="text" value='' autofocus class="form-control" placeholder="">
+                          <input type="text" value='' class="form-control" placeholder="">
                         </div>
                       </div>
                       <div class="col-xs-12 col-md-3">
@@ -788,7 +788,7 @@ ul.nav-tabs > li > a {
                         <div class="form-group">
                           <label class="control-label">Name of job
                           </label>
-                          <input type="text" value='' autofocus class="form-control" placeholder="Brödleverans">
+                          <input type="text" value='' class="form-control" placeholder="Brödleverans">
                         </div>
                       </div>
                       <div class="col-xs-12 col-md-8">
@@ -859,13 +859,13 @@ ul.nav-tabs > li > a {
                       <div class="fcol-xs-12 col-md-3">
                         <div class="form-group">
                           <label class="control-label nowrap">Time in advance (min)</label>
-                          <input type="text" value='' autofocus class="form-control" placeholder="30">
+                          <input type="text" value='' class="form-control" placeholder="30">
                         </div>
                       </div>
                       <div class="col-xs-12 col-md-9">
                         <div class="form-group">
                           <label class="control-label nowrap">Notify expected delays</label>
-                          <input type="text" value='' autofocus class="form-control" placeholder="">
+                          <input type="text" value='' class="form-control" placeholder="">
                         </div>
                       </div>
                       <div class="col-xs-12 col-md-3">
