--- a/docs/template/advanced-tables/table-column-selector-widget.html
+++ b/docs/template/advanced-tables/table-column-selector-widget.html
@@ -21,29 +21,29 @@
 
     	<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.28.15/js/widgets/widget-columnSelector.js"></script>
 
-		<style>
+    	<style>
 
-		    tbody th {font-family: 'Scania Sans Bold'}
+    	tbody th {font-family: 'Scania Sans Bold'}
 
-		    .tablesorter-filter-row {border:none;}
-		    
-		    tbody th {font-family: 'Scania Sans Bold'}
+    	.tablesorter-filter-row {border:none;}
 
-
-
-		    .table thead > tr > td {
-		        margin-top: -5px;
-		    }
-
-		    .tablesorter th, .tablesorter td {border:none !important;}
-
-		    .table tr.tablesorter-filter-row .form-control {
-		        color: black;
-		        font-size: inherit;
-		    }
+    	tbody th {font-family: 'Scania Sans Bold'}
 
 
-		</style>  
+
+    	.table thead > tr > td {
+    		margin-top: -5px;
+    	}
+
+    	.tablesorter th, .tablesorter td {border:none !important;}
+
+    	.table tr.tablesorter-filter-row .form-control {
+    		color: black;
+    		font-size: inherit;
+    	}
+
+
+    </style>  
 
 
     <style id="css">/*** custom css only popup ***/
@@ -90,14 +90,14 @@
     	color: #ddd;
     }
 
-	label.disabled input[type=checkbox] + span:before {
-	    border: 2px solid #d4d4d4;
-	}
+    label.disabled input[type=checkbox] + span:before {
+    	border: 2px solid #d4d4d4;
+    }
 
-	label.disabled input[type=checkbox]:checked + span:before {
-	    background: #d4d4d4;
-	    border: 2px solid #d4d4d4;
-	}
+    label.disabled input[type=checkbox]:checked + span:before {
+    	background: #d4d4d4;
+    	border: 2px solid #d4d4d4;
+    }
 
 
 
@@ -109,11 +109,11 @@
 
 	$(function() {
 
-	/*** custom css only button popup ***/
-	$(".custom-popup").tablesorter({
-		theme: 'corporate-ui',
-		widgets: ['zebra', 'columnSelector', 'stickyHeaders'],
-		widgetOptions : {
+		/*** custom css only button popup ***/
+		$(".custom-popup").tablesorter({
+			theme: 'corporate-ui',
+			widgets: ['zebra', 'columnSelector', 'stickyHeaders'],
+			widgetOptions : {
 			// target the column selector markup
 			columnSelector_container : $('#columnSelector'),
 			// column status, true = display, false = hide
@@ -159,80 +159,105 @@
 			columnSelector_cssChecked : 'checked'
 		}
 	});
-});
+	});
 </script>
 </head>
-<body class="scania">
+<body class="scania app">
 
-<c-corporate-header site-name="UX Library">
-    <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
-    <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
-</c-corporate-header>
+	<c-corporate-header site-name="UX Library">
+		<nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
+		<nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+	</c-corporate-header>
 
-<c-main-content>
+	<c-main-content>
 
-    <c-main-navigation show-search>
-        <primary-items>
-            <nav-item location="table-basic-template.html">Standard Tables</nav-item>
-            <nav-item location="table-pagination.html">Table with Pagination</nav-item>            
-            <nav-item location="table-filtered-app.html">Filtered table</nav-item>
-            <nav-item location="table-column-selector-widget.html">Column Selector</nav-item>
-            <nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>            
-            <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
-            <nav-item location="table-tree-view.html">Tree View</nav-item>                   
-        </primary-items>
-    </c-main-navigation>
+		<c-main-navigation show-search>
+			<primary-items>
+				<nav-item location="table-basic-template.html">Standard Tables</nav-item>
+				<nav-item location="table-pagination.html">Table with Pagination</nav-item>            
+				<nav-item location="table-filtered-app.html">Filtered table</nav-item>
+				<nav-item location="table-column-selector-widget.html">Column Selector</nav-item>
+				<nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>            
+				<nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
+				<nav-item location="table-tree-view.html">Tree View</nav-item>                   
+			</primary-items>
+		</c-main-navigation>
 
+		<section class="light">
+			<div class="container margin-bottom">
+			    <ul class="nav nav-tabs nav-tabs-light">
+			      <li class="active app-styling"><a href="#">Application Styling</a></li>
+			      <li class="public-styling"><a href="#">Public Site Styling</a></li>   
+			    </ul> 
 
-
-    <section class="light">
-        <div class="container margin-bottom">
-			<h2>Responsive table with column prioritization</h2>
-			<p>This is a responsive table based on the Tablesorter plugin. If you change the width of the browser window, you'll see that some columns will be hidden. To chose what columns to be visible, select them from the "Toggle Columns" dropdown button.</p>     
-		</div>
-		<div class="container-fluid">	  
-	<div id="main">
-		<h1></h1>
-
-		<!-- This selector markup is completely customizable -->
-		<div class="columnSelectorWrapper">
-			<input id="colSelect1" type="checkbox" class="hidden">
-			<label class="columnSelectorButton" for="colSelect1">Toggle Columns</label>
-			<div id="columnSelector" class="columnSelector">
-				<!-- this div is where the column selector is added -->
+				<h2>Responsive table with column prioritization</h2>
+				<p>This is a responsive table based on the Tablesorter plugin. If you change the width of the browser window, you'll see that some columns will be hidden. To chose what columns to be visible, select them from the "Toggle Columns" dropdown button.</p>     
 			</div>
-		</div> (When "Auto" is set, the table becomes responsive; resize the browser window to see it work)
+			<div class="container-fluid">	  
+				<div id="main">
+					<h1></h1>
 
-		<table class="table tablesorter custom-popup">
-			<thead>
-				<tr>
-					<th data-priority="critical">Rank</th>
-					<th data-priority="3">First Name</th>
-					<th data-priority="critical">Last Name</th>
-					<th data-priority="7">Age</th>
-					<th data-priority="4">Total</th>
-					<th data-priority="5">Discount</th>
-					<th data-priority="6">Date</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr><td>1</td><td>Philip Aaron Wong</td><td>Johnson Sr Esq</td><td>25</td><td>$5.95</td><td>22%</td><td>Jun 26, 2004 7:22 AM</td></tr>
-				<tr><td>11</td><td>Aaron</td><td>Hibert</td><td>12</td><td>$2.99</td><td>5%</td><td>Aug 21, 2009 12:21 PM</td></tr>
-				<tr><td>12</td><td>Brandon Clark</td><td>Henry Jr</td><td>51</td><td>$42.29</td><td>18%</td><td>Oct 13, 2000 1:15 PM</td></tr>
-				<tr><td>111</td><td>Peter</td><td>Parker</td><td>28</td><td>$9.99</td><td>20%</td><td>Jul 6, 2006 8:14 AM</td></tr>
-				<tr><td>21</td><td>John</td><td>Hood</td><td>33</td><td>$19.99</td><td>25%</td><td>Dec 10, 2002 5:14 AM</td></tr>
-				<tr><td>013</td><td>Clark</td><td>Kent Sr.</td><td>18</td><td>$15.89</td><td>44%</td><td>Jan 12, 2003 11:14 AM</td></tr>
-				<tr><td>005</td><td>Bruce</td><td>Almighty Esq</td><td>45</td><td>$153.19</td><td>44%</td><td>Jan 18, 2021 9:12 AM</td></tr>
-				<tr><td>10</td><td>Alex</td><td>Dumass</td><td>13</td><td>$5.29</td><td>4%</td><td>Jan 8, 2012 5:11 PM</td></tr>
-				<tr><td>16</td><td>Jim</td><td>Franco</td><td>24</td><td>$14.19</td><td>14%</td><td>Jan 14, 2004 11:23 AM</td></tr>
-				<tr><td>166</td><td>Bruce Lee</td><td>Evans</td><td>22</td><td>$13.19</td><td>11%</td><td>Jan 18, 2007 9:12 AM</td></tr>
-				<tr><td>100</td><td>Brenda Dexter</td><td>McMasters</td><td>18</td><td>$55.20</td><td>15%</td><td>Feb 12, 2010 7:23 PM</td></tr>
-				<tr><td>55</td><td>Dennis</td><td>Bronson</td><td>65</td><td>$123.00</td><td>32%</td><td>Jan 20, 2001 1:12 PM</td></tr>
-				<tr><td>9</td><td>Martha</td><td>delFuego</td><td>25</td><td>$22.09</td><td>17%</td><td>Jun 11, 2011 10:55 AM</td></tr>
-			</tbody>
-		</table>
+					<!-- This selector markup is completely customizable -->
+					<div class="columnSelectorWrapper">
+						<input id="colSelect1" type="checkbox" class="hidden">
+						<label class="columnSelectorButton" for="colSelect1">Toggle Columns</label>
+						<div id="columnSelector" class="columnSelector">
+							<!-- this div is where the column selector is added -->
+						</div>
+					</div> (When "Auto" is set, the table becomes responsive; resize the browser window to see it work)
 
-	</div>
-</main-content>
-</body>
-</html>
+					<table class="table tablesorter custom-popup">
+						<thead>
+							<tr>
+								<th data-priority="critical">Rank</th>
+								<th data-priority="3">First Name</th>
+								<th data-priority="critical">Last Name</th>
+								<th data-priority="7">Age</th>
+								<th data-priority="4">Total</th>
+								<th data-priority="5">Discount</th>
+								<th data-priority="6">Date</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr><td>1</td><td>Philip Aaron Wong</td><td>Johnson Sr Esq</td><td>25</td><td>$5.95</td><td>22%</td><td>Jun 26, 2004 7:22 AM</td></tr>
+							<tr><td>11</td><td>Aaron</td><td>Hibert</td><td>12</td><td>$2.99</td><td>5%</td><td>Aug 21, 2009 12:21 PM</td></tr>
+							<tr><td>12</td><td>Brandon Clark</td><td>Henry Jr</td><td>51</td><td>$42.29</td><td>18%</td><td>Oct 13, 2000 1:15 PM</td></tr>
+							<tr><td>111</td><td>Peter</td><td>Parker</td><td>28</td><td>$9.99</td><td>20%</td><td>Jul 6, 2006 8:14 AM</td></tr>
+							<tr><td>21</td><td>John</td><td>Hood</td><td>33</td><td>$19.99</td><td>25%</td><td>Dec 10, 2002 5:14 AM</td></tr>
+							<tr><td>013</td><td>Clark</td><td>Kent Sr.</td><td>18</td><td>$15.89</td><td>44%</td><td>Jan 12, 2003 11:14 AM</td></tr>
+							<tr><td>005</td><td>Bruce</td><td>Almighty Esq</td><td>45</td><td>$153.19</td><td>44%</td><td>Jan 18, 2021 9:12 AM</td></tr>
+							<tr><td>10</td><td>Alex</td><td>Dumass</td><td>13</td><td>$5.29</td><td>4%</td><td>Jan 8, 2012 5:11 PM</td></tr>
+							<tr><td>16</td><td>Jim</td><td>Franco</td><td>24</td><td>$14.19</td><td>14%</td><td>Jan 14, 2004 11:23 AM</td></tr>
+							<tr><td>166</td><td>Bruce Lee</td><td>Evans</td><td>22</td><td>$13.19</td><td>11%</td><td>Jan 18, 2007 9:12 AM</td></tr>
+							<tr><td>100</td><td>Brenda Dexter</td><td>McMasters</td><td>18</td><td>$55.20</td><td>15%</td><td>Feb 12, 2010 7:23 PM</td></tr>
+							<tr><td>55</td><td>Dennis</td><td>Bronson</td><td>65</td><td>$123.00</td><td>32%</td><td>Jan 20, 2001 1:12 PM</td></tr>
+							<tr><td>9</td><td>Martha</td><td>delFuego</td><td>25</td><td>$22.09</td><td>17%</td><td>Jun 11, 2011 10:55 AM</td></tr>
+						</tbody>
+					</table>
+
+				</div>
+			</main-content>
+
+  <script>
+    $(function(){
+
+	    $(".public-styling").click(function() {
+	        $('body').removeClass("app");
+	        $('body').addClass("public");  
+	        $('.app-styling').removeClass("active"); 
+	        $('.public-styling').addClass("active");   
+	        
+	    });
+
+	    $(".app-styling").click(function() {
+	        $('body').removeClass("public");
+	        $('body').addClass("app");        
+	        $('.app-styling').addClass("active"); 
+	        $('.public-styling').removeClass("active");     
+	    });  
+
+  });
+  </script>
+  			
+		</body>
+		</html>
