--- a/docs/template/advanced-tables/table-basic-template.html
+++ b/docs/template/advanced-tables/table-basic-template.html
@@ -14,7 +14,7 @@
 
 <body class="scania">
 
-<c-corporate-header site-name="UX Library">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
