--- a/docs/template/advanced-tables/table-column-selector-widget.html
+++ b/docs/template/advanced-tables/table-column-selector-widget.html
@@ -164,7 +164,7 @@
 </head>
 <body class="scania app">
 
-	<c-corporate-header site-name="UX Library">
+	<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
 		<nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
 		<nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 	</c-corporate-header>
