--- a/docs/template/advanced-tables/table-filtered-app.html
+++ b/docs/template/advanced-tables/table-filtered-app.html
@@ -57,7 +57,7 @@ href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/ad
 </head>
 <body class="scania">
 
-<c-corporate-header site-name="UX Library">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
