--- a/docs/template/advanced-tables/table-match-any-column.htm
+++ b/docs/template/advanced-tables/table-match-any-column.htm
@@ -46,7 +46,7 @@
 </head>
 <body class="scania">
 
-	<c-corporate-header site-name="UX Library">
+	<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
 		<nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
 		<nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 	</c-corporate-header>
