--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -22,7 +22,7 @@
 
 
 <xmp class="code-to-copy"> 
- <dont-run-c-corporate-header site-name="UX Library" site-url="/ux-library/">
+ <dont-run-c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </dont-run-c-corporate-header>
@@ -55,7 +55,7 @@
 
 <div class="copyable">
 
-  <c-corporate-header site-name="UX Library" site-url="/ux-library/">
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
