--- a/docs/template/advanced-tables/table-basic-template.html
+++ b/docs/template/advanced-tables/table-basic-template.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="scania">
+<body class="scania app">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
@@ -36,7 +36,13 @@
 
 
     <section class="light">
-        <div class="container margin-bottom">
+      <div class="container-fluid margin-bottom">
+
+      <ul class="nav nav-tabs nav-tabs-light">
+        <li class="active app-styling"><a href="#">Application Styling</a></li>
+        <li class="public-styling"><a href="#">Public Site Styling</a></li>   
+      </ul>
+
       <h2>Basic Corporate UI Table</h2>
       <p style="margin:20px 0 40px">The basic table with no plugins.</p>  
 
@@ -136,5 +142,6 @@
     </div>
   </section>  
 </c-main-content>
+<script src="/corporate-ui/ux-lib.js"></script>
 </body>
 </html>
