--- a/docs/template/advanced-tables/table-filtered-app.html
+++ b/docs/template/advanced-tables/table-filtered-app.html
@@ -11,51 +11,52 @@
 	<script src="https://static.scania.com/build/global/2.3.4/js/corporate-ui.js"></script>
 
 
-<!-- Table Sorter Plugin -->
+	<!-- Table Sorter Plugin -->
 
-<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/js/jquery.tablesorter.min.js"></script>
-<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/js/jquery.tablesorter.widgets.min.js"></script>
-<!-- Tablesorter: optional -->
-<link rel="stylesheet"
-href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/addons/pager/jquery.tablesorter.pager.css">
-<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/addons/pager/jquery.tablesorter.pager.js"></script>
-<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/addons/expandable/jquery.tablesorter.expandable.js"></script>
-
-
-<script>
-	$(function () {
-		$("#table").tablesorter({sortList: [[0, 0], [1, 0]]});
-	});
-</script>
+	<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/js/jquery.tablesorter.min.js"></script>
+	<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/js/jquery.tablesorter.widgets.min.js"></script>
+	<!-- Tablesorter: optional -->
+	<link rel="stylesheet"
+	href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/addons/pager/jquery.tablesorter.pager.css">
+	<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/addons/pager/jquery.tablesorter.pager.js"></script>
+	<script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/addons/expandable/jquery.tablesorter.expandable.js"></script>
 
 
-<style>
-
-	tbody th {font-family: 'Scania Sans Bold'}
-	.tablesorter-filter-row {border:none;}
-
-	tbody th {font-family: 'Scania Sans Bold'}
-
+	<script>
+		$(function () {
+			$("#table").tablesorter({sortList: [[0, 0], [1, 0]]});
+		});
+	</script>
 
 
-		    .table thead > tr > td {
-		        padding-top: 0;
-		    }
+	<style>
 
-	.tablesorter th, .tablesorter td {border:none !important;}
+		tbody th {font-family: 'Scania Sans Bold'}
+		.tablesorter-filter-row {border:none;}
 
-	.table tr.tablesorter-filter-row .form-control {
-		color: black;
-		font-size: inherit;
-	}
+		tbody th {font-family: 'Scania Sans Bold'}
 
 
-</style>    
+
+			    .table thead > tr > td {
+			        padding-top: 0;
+			    }
+
+		.tablesorter th, .tablesorter td {border:none !important;}
+
+		.table tr.tablesorter-filter-row .form-control {
+			color: black;
+			font-size: inherit;
+		}
 
 
-<!--   <link rel="stylesheet" href="/ux-library/ux-lib.css"> -->
+	</style>    
+
+
+<link rel="stylesheet" href="/corporate-ui/ux-lib.css">
 </head>
-<body class="scania">
+
+<body class="scania app">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
@@ -79,7 +80,11 @@ href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/ad
 
 
     <section class="light">
-        <div class="container margin-bottom">
+        <div class="container-fluid margin-bottom">
+        	<ul class="nav nav-tabs nav-tabs-light container">
+		      <li class="active app-styling"><a href="#">Application Styling</a></li>
+		      <li class="public-styling"><a href="#">Public Site Styling</a></li>   
+		    </ul> 
 			<h2>Filtered Table Prototype</h2>
 			<p>This is a basic filtered and sortable table based on the Tablesorter plugin. There are many plugins that can do this but Tablesorter does pretty much everyting else that you might need to do with a table as well.</p>     
 		</div>
@@ -152,5 +157,8 @@ href="https://static.scania.com/vendors/components/jQuery/table-sorter/2.17.9/ad
 			</table>
 		</div>
 	</c-main-content>
+
+	<script src="/corporate-ui/ux-lib.js"></script>
+
 </body>
 </html>
