--- a/docs/template/advanced-tables/table-match-any-column.htm
+++ b/docs/template/advanced-tables/table-match-any-column.htm
@@ -44,7 +44,7 @@
 });</script>
 
 </head>
-<body class="scania">
+<body class="scania app">
 
 	<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
 		<nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
@@ -68,7 +68,12 @@
 
 
 		<section class="light">
-			<div class="container margin-bottom">
+	        <div class="container-fluid margin-bottom">
+
+	            <ul class="nav nav-tabs nav-tabs-light">
+	              <li class="active app-styling"><a href="#">Application Styling</a></li>
+	              <li class="public-styling"><a href="#">Public Site Styling</a></li>   
+	            </ul> 
 				<h2>Filter Widget External Search</h2>
 				<p>Flexible client-side table sorting</p>     
 			</div>
@@ -108,6 +113,6 @@
 						</tbody>
 					</table>
 			</div>
-
-		</body>
-		</html>
+	<script src="/corporate-ui/ux-lib.js"></script>
+</body>
+</html>
