--- a/docs/template/advanced-tables/table-pagination.html
+++ b/docs/template/advanced-tables/table-pagination.html
@@ -54,7 +54,7 @@
 
   <link rel="stylesheet" href="/ux-library/ux-lib.css">
 </head>
-<body class="scania">
+<body class="scania app">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
@@ -78,9 +78,15 @@
 
 
     <section class="light">
-        <div class="container margin-bottom">
+        <div class="container-fluid margin-bottom">
+
+            <ul class="nav nav-tabs nav-tabs-light">
+              <li class="active app-styling"><a href="#">Application Styling</a></li>
+              <li class="public-styling"><a href="#">Public Site Styling</a></li>   
+            </ul> 
             <h2>Table with Pagination</h2>
-            <p>This is a basic table, sortable with pagination based on the Tablesorter plugin. This is a quickly made prototype that needs to be improved when it comes to styling.</p>     
+            <p>This is a basic table, sortable with pagination based on the Tablesorter plugin. This is a quickly made prototype that needs to be improved when it comes to styling.</p>
+            
         </div>
         <div class="container-fluid">
     <table id="table-sample" class="tablesorter">
@@ -366,4 +372,6 @@
   <c-corporate-footer></c-corporate-footer>
 
   <script src="/corporate-ui/ux-lib.js"></script>
+
 </body>
+</html>
