--- a/docs/template/advanced-tables/table-tree-view.html
+++ b/docs/template/advanced-tables/table-tree-view.html
@@ -22,7 +22,7 @@
 
   <link rel="stylesheet" href="/ux-library/ux-lib.css">
 </head>
-<body class="scania" data-env="proto">
+<body class="scania app" data-env="proto">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
