--- a/docs/template/advanced-tables/table-match-any-column.htm
+++ b/docs/template/advanced-tables/table-match-any-column.htm
@@ -68,16 +68,14 @@
 
 
 		<section class="light">
-	        <div class="container-fluid margin-bottom">
+	        <div class="container-fluid">
 
 	            <ul class="nav nav-tabs nav-tabs-light">
 	              <li class="active app-styling"><a href="#">Application Styling</a></li>
 	              <li class="public-styling"><a href="#">Public Site Styling</a></li>   
 	            </ul> 
 				<h2>Filter Widget External Search</h2>
-				<p>Flexible client-side table sorting</p>     
-			</div>
-			<div class="container-fluid app">
+				<p>Flexible client-side table sorting. Filter the table using the input field to the right side of the screen.</p>     
 				<div class="pull-right margin-bottom">
 					<input class="search form-control" style="width:200px;float:left" type="search" data-column="all"><button type="button" class="reset btn btn-clear">x</button><i class="icon-filter"></i>
 				</div>	
