--- a/docs/template/advanced-tables/table-column-selector-widget.html
+++ b/docs/template/advanced-tables/table-column-selector-widget.html
@@ -162,7 +162,7 @@
 	});
 </script>
 </head>
-<body class="scania app">
+<body class="scania app" data-env="proto">
 
 	<c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
 		<nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
