--- a/docs/template/advanced-tables/table-pagination.html
+++ b/docs/template/advanced-tables/table-pagination.html
@@ -54,7 +54,7 @@
 
   <link rel="stylesheet" href="/ux-library/ux-lib.css">
 </head>
-<body class="scania app">
+<body class="scania app" data-env="proto">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
@@ -86,7 +86,7 @@
             </ul> 
             <h2>Table with Pagination</h2>
             <p>This is a basic table, sortable with pagination based on the Tablesorter plugin. This is a quickly made prototype that needs to be improved when it comes to styling.</p>
-            
+
         </div>
         <div class="container-fluid">
     <table id="table-sample" class="tablesorter">
