--- a/docs/template/advanced-tables/table-tree-view.html
+++ b/docs/template/advanced-tables/table-tree-view.html
@@ -22,7 +22,7 @@
 
   <link rel="stylesheet" href="/ux-library/ux-lib.css">
 </head>
-<body class="scania app" data-env="proto">
+<body class="scania" data-env="proto">
 
 <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
@@ -50,7 +50,7 @@
             <h2 class="color-brand-02">Apple Tree View</h2>
             <p>This is a basic tree view often used by Apple.</p>     
         </div>
-  <div id="columns"></div>
+    <div id="columns" class="app"></div>
 
   <script src="https://static.scania.com/vendors/components/jQuery/hColumns/js/jquery.hcolumns.min.js"></script>
 
