--- a/docs/template/advanced-tables/table-filtered-app.html
+++ b/docs/template/advanced-tables/table-filtered-app.html
@@ -81,7 +81,7 @@
 
     <section class="light">
         <div class="container-fluid margin-bottom">
-        	<ul class="nav nav-tabs nav-tabs-light container">
+        	<ul class="nav nav-tabs nav-tabs-light">
 		      <li class="active app-styling"><a href="#">Application Styling</a></li>
 		      <li class="public-styling"><a href="#">Public Site Styling</a></li>   
 		    </ul> 
